force-app/main/default/objects/Partner__c/fields/A_Commission__c.field-meta.xml
<CustomField>
    <fullName>A_Commission__c</fullName>
    <label>A Commission</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>