force-app/main/default/objects/Partner__c/fields/A_Commission_RS__c.field-meta.xml
<CustomField>
    <fullName>A_Commission_RS__c</fullName>
    <label>A Commission</label>
    <summarizedField>BSST__c.A_Commission__c</summarizedField>
    <summaryForeignKey>BSST__c.Partner__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>