force-app/main/default/objects/Partner__c/fields/A_Rate__c.field-meta.xml
<CustomField>
    <fullName>A_Rate__c</fullName>
    <label>A Rate (kW DC)</label>
    <precision>13</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>