force-app/main/default/objects/Partner__c/fields/A_Sales_kW_RS__c.field-meta.xml
<CustomField>
    <fullName>A_Sales_kW_RS__c</fullName>
    <label>A Sales (kW)</label>
    <summarizedField>BSST__c.A_Sales_kW__c</summarizedField>
    <summaryForeignKey>BSST__c.Partner__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>