force-app/main/default/objects/Partner__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link to partner or client account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partners</relationshipLabel>
    <relationshipName>Partners</relationshipName>
    <type>Lookup</type>
</CustomField>