force-app/main/default/objects/Partner__c/fields/Additional_CC_Email__c.field-meta.xml
<CustomField>
    <fullName>Additional_CC_Email__c</fullName>
    <label>Additional CC Email (1)</label>
    <type>Email</type>
</CustomField>