force-app/main/default/objects/Partner__c/fields/B_Commission__c.field-meta.xml
<CustomField>
    <fullName>B_Commission__c</fullName>
    <label>B Commission</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>