force-app/main/default/objects/Partner__c/fields/B_Commission_RS__c.field-meta.xml
<CustomField>
    <fullName>B_Commission_RS__c</fullName>
    <label>B Commission</label>
    <summarizedField>BSST__c.B_Commission__c</summarizedField>
    <summaryForeignKey>BSST__c.Partner__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>