force-app/main/default/objects/Partner__c/fields/B_Rate__c.field-meta.xml
<CustomField>
    <fullName>B_Rate__c</fullName>
    <label>B Rate (kW DC)</label>
    <precision>13</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>