force-app/main/default/objects/Partner__c/fields/B_Sales_kW__c.field-meta.xml
<CustomField>
    <fullName>B_Sales_kW__c</fullName>
    <label>B Sales (kW)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>