force-app/main/default/objects/Partner__c/fields/CC_Email_3__c.field-meta.xml
<CustomField>
    <fullName>CC_Email_3__c</fullName>
    <label>Additional CC Email (2)</label>
    <type>Email</type>
</CustomField>