force-app/main/default/objects/Partner__c/fields/Commissionn_Structure__c.field-meta.xml
<CustomField>
    <fullName>Commissionn_Structure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commission Structure</label>
    <referenceTo>Commission_Structure__c</referenceTo>
    <relationshipLabel>Partners</relationshipLabel>
    <relationshipName>Partners</relationshipName>
    <type>Lookup</type>
</CustomField>