force-app/main/default/objects/Partner__c/fields/Concatenated_Address__c.field-meta.xml
<CustomField>
    <fullName>Concatenated_Address__c</fullName>
    <formula>Street_Address__c &amp; &quot; &quot;&amp;City__c &amp; &quot; &quot;&amp;State__c &amp; &quot; &quot;&amp;Zip_Code__c</formula>
    <label>Concatenated Address</label>
    <type>Text</type>
</CustomField>