force-app/main/default/objects/Partner__c/fields/Conga_Conductor_CS_Partner_Update__c.field-meta.xml
<CustomField>
    <fullName>Conga_Conductor_CS_Partner_Update__c</fullName>
    <description>for conga conductor</description>
    <formula>&quot;&amp;solmgr=1&quot; +
&quot;&amp;Id=&quot; + Id +
&quot;&amp;QueryId=[QC]a270a000001dI6z,[Opps]a270a000001EiFY, [DQLead]a270a000001EkT5, [Referrals]a270a000001EpbL, [Expired]a270a000000N74w, [Complete]a270a000000N75f&quot; +
&quot;&amp;TemplateId=a2F0a000001ZXvg&quot; +
&quot;&amp;CongaEmailTemplateId=a260a00000FhciJ&quot; + 
&quot;&amp;EmailAdditionalTo=&quot; + Email__c +
&quot;&amp;ofn=&quot; + Name + &quot; &quot; + &quot;Community Solar Update Report&quot; + &quot; &quot; + TEXT(TODAY()) +
&quot;&amp;qmode=SendEmail&quot; +
&quot;&amp;SC0=1&quot; +
&quot;&amp;SC1=Attachments&quot; +
&quot;&amp;emailcc=&quot; + Additional_CC_Email__c +
&quot;&amp;emailfromid=0D20a000000PBPX&quot;</formula>
    <inlineHelpText>for conga conductor</inlineHelpText>
    <label>Conga Conductor CS Partner Update</label>
    <type>Text</type>
</CustomField>