force-app/main/default/objects/Partner__c/fields/Conga_Conductor_CS_Partner_Update_NY__c.field-meta.xml
<CustomField>
    <fullName>Conga_Conductor_CS_Partner_Update_NY__c</fullName>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;Id=&quot; + Id + 
&quot;&amp;QueryId=[QC]a270a000000Si1k,[Opps]a270a000000Si1p, [DQLead]a270a000000Si1u, [Referrals]a270a000000Si1z, [Expired]a270a000000Si24, [Complete]a270a000000Si29&quot; + 
&quot;&amp;TemplateId=a2F0a000000OIoi&quot; + 
&quot;&amp;CongaEmailTemplateId=a260a00000FhciJ&quot; + 
&quot;&amp;EmailAdditionalTo=&quot; + Email__c + 
&quot;&amp;ofn=&quot; + Name + &quot; &quot; + &quot;NY Community Solar Update Report&quot; + &quot; &quot; + TEXT(TODAY()) + 
&quot;&amp;qmode=SendEmail&quot; + 
&quot;&amp;SC0=1&quot; + 
&quot;&amp;SC1=Attachments&quot; + 
&quot;&amp;emailcc=&quot; + Additional_CC_Email__c +
&quot;&amp;emailfromid=0D20a000000PBPX&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga_Conductor_CS_Partner_Update_NY</label>
    <type>Text</type>
</CustomField>