force-app/main/default/objects/Partner__c/fields/Customer_Reviews_Re_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reviews_Re_Check_Date__c</fullName>
    <inlineHelpText>Populated Date = Date of Re-Check</inlineHelpText>
    <label>Customer Reviews (Re-Check Date)</label>
    <type>Date</type>
</CustomField>