force-app/main/default/objects/Partner__c/fields/Default_Application__c.field-meta.xml
<CustomField>
    <fullName>Default_Application__c</fullName>
    <description>Allows the default application in the Solar Loan Portal to be toggled.</description>
    <inlineHelpText>Allows the default application in the Solar Loan Portal to be toggled.</inlineHelpText>
    <label>Default Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BlueWave Solar Loan</fullName>
            </value>
            <value>
                <fullName>Massachusetts Solar Loan Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>