force-app/main/default/objects/Partner__c/fields/Default_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Default_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Sales Rep</label>
    <referenceTo>BSST__c</referenceTo>
    <relationshipLabel>Partners</relationshipLabel>
    <relationshipName>Partners</relationshipName>
    <type>Lookup</type>
</CustomField>