force-app/main/default/objects/Partner__c/fields/Effective_Insurance_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Effective_Insurance_Coverage__c</fullName>
    <description>Day that partner needs to update/send us new insurance policy</description>
    <inlineHelpText>Day that partner needs to update/send us new insurance policy</inlineHelpText>
    <label>Proof of Insurance (Expiration Date)</label>
    <type>Date</type>
</CustomField>