force-app/main/default/objects/Partner__c/fields/Finance_Option_Freedom__c.field-meta.xml
<CustomField>
    <fullName>Finance_Option_Freedom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finance Option Freedom?</label>
    <type>Checkbox</type>
</CustomField>