force-app/main/default/objects/Partner__c/fields/First_Application_Submitted__c.field-meta.xml
<CustomField>
    <fullName>First_Application_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Application Submitted</label>
    <type>Checkbox</type>
</CustomField>