force-app/main/default/objects/Partner__c/fields/Insignia__c.field-meta.xml
<CustomField>
    <fullName>Insignia__c</fullName>
    <label>Insignia</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>