force-app/main/default/objects/Partner__c/fields/Installer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Installer_Notes__c</fullName>
    <label>Installer Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>