force-app/main/default/objects/Partner__c/fields/Last_Contact_Notes__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Notes__c</fullName>
    <label>Partner Last Contact Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>