force-app/main/default/objects/Partner__c/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <description>The identifier used for the SLPortal in order to query for the Static Resource to be shown on the portal.</description>
    <inlineHelpText>This must be a png file</inlineHelpText>
    <label>Logo</label>
    <length>25</length>
    <type>Text</type>
</CustomField>