force-app/main/default/objects/Partner__c/fields/Monitoring_Software__c.field-meta.xml
<CustomField>
    <fullName>Monitoring_Software__c</fullName>
    <label>Monitoring Software</label>
    <length>255</length>
    <type>Text</type>
</CustomField>