force-app/main/default/objects/Partner__c/fields/NABSEP_License_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>NABSEP_License_Expiration_Date__c</fullName>
    <inlineHelpText>Populated Date = Date of Expiration or Date for Re-Submittal</inlineHelpText>
    <label>NABCEP License (Expiration Date)</label>
    <type>Date</type>
</CustomField>