force-app/main/default/objects/Partner__c/fields/Name_on_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Name_on_Bank_Account__c</fullName>
    <label>Name on Bank Account</label>
    <length>40</length>
    <type>Text</type>
</CustomField>