force-app/main/default/objects/Partner__c/fields/Opportunity_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Lookup</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Partners</relationshipLabel>
    <relationshipName>Partners</relationshipName>
    <type>Lookup</type>
</CustomField>