force-app/main/default/objects/Partner__c/fields/OSHA_Card_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>OSHA_Card_Expiration_Date__c</fullName>
    <inlineHelpText>Populated Date = Date of Expiration or Date for Re-Submittal</inlineHelpText>
    <label>OSHA Card (Expiration Date)</label>
    <type>Date</type>
</CustomField>