force-app/main/default/objects/Partner__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Community Solar</fullName>
            </value>
            <value>
                <fullName>Residential Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>