force-app/main/default/objects/Partner__c/fields/Proof_of_Experience__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Experience__c</fullName>
    <inlineHelpText>Populated Date = Date of Expiration or Date for Re-Submittal</inlineHelpText>
    <label>Proof of Experience (Review Date)</label>
    <type>Date</type>
</CustomField>