force-app/main/default/objects/Partner__c/fields/RL_Commission_Cap__c.field-meta.xml
<CustomField>
    <fullName>RL_Commission_Cap__c</fullName>
    <inlineHelpText>kW cap on RL commission</inlineHelpText>
    <label>RL Commission Cap (kW)</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>