force-app/main/default/objects/Partner__c/fields/RL_Commission_Structure__c.field-meta.xml
<CustomField>
    <fullName>RL_Commission_Structure__c</fullName>
    <description>$/kW for RL commission structure</description>
    <inlineHelpText>$/kW for RL commission structure</inlineHelpText>
    <label>RL Commission Structure ($/kW DC)</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>