force-app/main/default/objects/Partner__c/fields/RL_DOER_Commission_Cap_kW__c.field-meta.xml
<CustomField>
    <fullName>RL_DOER_Commission_Cap_kW__c</fullName>
    <label>RL DOER Commission Cap (kW)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>