force-app/main/default/objects/Partner__c/fields/RL_DOER_Commission_Structure_kW_DC__c.field-meta.xml
<CustomField>
    <fullName>RL_DOER_Commission_Structure_kW_DC__c</fullName>
    <label>RL DOER Commission Structure ($/kW DC)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>