force-app/main/default/objects/Partner__c/fields/Sales_Agreement_Signer__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agreement_Signer__c</fullName>
    <inlineHelpText>This selects who is in charge of uploading sales agreements via docusign. If Sales Rep is selected, DocuSign will send the envelope to the Sales Rep&apos;s email. If Partner is selected, DocuSign will send the envelope to the email on the Partner record.</inlineHelpText>
    <label>Sales Agreement Signer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Sales Representative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>