force-app/main/default/objects/Partner__c/fields/Sales_Report__c.field-meta.xml
<CustomField>
    <fullName>Sales_Report__c</fullName>
    <label>Sales Report</label>
    <type>Url</type>
</CustomField>