force-app/main/default/objects/Partner__c/fields/Sales_ReportText__c.field-meta.xml
<CustomField>
    <fullName>Sales_ReportText__c</fullName>
    <formula>HYPERLINK( Sales_Report__c , &quot;Dashboard&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Report</label>
    <type>Text</type>
</CustomField>