force-app/main/default/objects/Partner__c/fields/Service_Model__c.field-meta.xml
<CustomField>
    <fullName>Service_Model__c</fullName>
    <label>Service Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Self-Service</fullName>
            </value>
            <value>
                <fullName>Full-Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>