force-app/main/default/objects/Partner__c/fields/service_territory__c.field-meta.xml
<CustomField>
    <fullName>service_territory__c</fullName>
    <label>Load Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>NEMA</fullName>
            </value>
            <value>
                <fullName>SEMA</fullName>
            </value>
            <value>
                <fullName>WCMA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>