force-app/main/default/objects/Partner__c/fields/Total_Available_Capacity_kW_DC__c.field-meta.xml
<CustomField>
    <fullName>Total_Available_Capacity_kW_DC__c</fullName>
    <formula>Total_Capacity_kW__c  - Total_Reserved_Capacity_kW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Available Capacity (kW DC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>