force-app/main/default/objects/Partner__c/fields/Total_Capacity_kW__c.field-meta.xml
<CustomField>
    <fullName>Total_Capacity_kW__c</fullName>
    <label>Total Capacity (kW)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>