force-app/main/default/objects/Partner__c/fields/Total_Commission_all__c.field-meta.xml
<CustomField>
    <fullName>Total_Commission_all__c</fullName>
    <formula>Total_Commission_RS__c +  Total_Commissions_from_Loans__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>