force-app/main/default/objects/Partner__c/fields/Total_Commission_RS__c.field-meta.xml
<CustomField>
    <fullName>Total_Commission_RS__c</fullName>
    <label>Total Commission</label>
    <summarizedField>BSST__c.Individual_Commission__c</summarizedField>
    <summaryForeignKey>BSST__c.Partner__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>