force-app/main/default/objects/Partner__c/fields/Total_Commissions_from_Loans__c.field-meta.xml
<CustomField>
    <fullName>Total_Commissions_from_Loans__c</fullName>
    <label>Total Commissions from Loans</label>
    <summarizedField>BSST__c.Commission__c</summarizedField>
    <summaryForeignKey>BSST__c.Partner__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>