force-app/main/default/objects/Partner__c/fields/Total_kWs_Installed__c.field-meta.xml
<CustomField>
    <fullName>Total_kWs_Installed__c</fullName>
    <label>Total kWs Installed</label>
    <summarizedField>BSST__c.Total_systems_kW__c</summarizedField>
    <summaryForeignKey>BSST__c.Partner__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>