force-app/main/default/objects/Partner__c/fields/Total_Leads__c.field-meta.xml
<CustomField>
    <fullName>Total_Leads__c</fullName>
    <label>Total Leads</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>