force-app/main/default/objects/Partner__c/fields/Total_Loans_Made__c.field-meta.xml
<CustomField>
    <fullName>Total_Loans_Made__c</fullName>
    <label>Total Loans Made</label>
    <summarizedField>BSST__c.Total_Loans__c</summarizedField>
    <summaryForeignKey>BSST__c.Partner__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>