force-app/main/default/objects/Partner__c/fields/Total_Opportunities2__c.field-meta.xml
<CustomField>
    <fullName>Total_Opportunities2__c</fullName>
    <label>Total Opportunities</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>