force-app/main/default/objects/Partner__c/fields/Total_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Total_Opportunities__c</fullName>
    <label>Total Subscribers</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>