force-app/main/default/objects/Partner__c/fields/Total_Principal_Loaned__c.field-meta.xml
<CustomField>
    <fullName>Total_Principal_Loaned__c</fullName>
    <label>Total Principal Loaned</label>
    <summarizedField>BSST__c.Total_Principal_Loaned__c</summarizedField>
    <summaryForeignKey>BSST__c.Partner__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>