force-app/main/default/objects/Partner__c/fields/Total_Sales_kW__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_kW__c</fullName>
    <label>Total Sales (kW)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>