force-app/main/default/objects/Partner__c/fields/Total_Sales_kW_RS__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_kW_RS__c</fullName>
    <label>Total Sales (kW)</label>
    <summarizedField>BSST__c.Individual_Sales__c</summarizedField>
    <summaryForeignKey>BSST__c.Partner__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>