force-app/main/default/objects/Partner__c/fields/Training_Video__c.field-meta.xml
<CustomField>
    <fullName>Training_Video__c</fullName>
    <formula>HYPERLINK(&quot;https://www.useloom.com/share/bd493780eef111e686bba382c40803ab&quot;, &quot;Click here to view this video&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>How to Submit an Application</label>
    <type>Text</type>
</CustomField>