force-app/main/default/objects/Partner__c/fields/Training_Video_four__c.field-meta.xml
<CustomField>
    <fullName>Training_Video_four__c</fullName>
    <formula>HYPERLINK(&quot;https://www.useloom.com/share/a41fc130f93b11e6929a8dc3874345a4&quot;, &quot;Click here to view this video&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>How to Complete QC Tasks</label>
    <type>Text</type>
</CustomField>