force-app/main/default/objects/Partner__c/fields/Training_Video_three__c.field-meta.xml
<CustomField>
    <fullName>Training_Video_three__c</fullName>
    <formula>HYPERLINK(&quot;https://www.useloom.com/share/69483390ee2c11e69f7d3776e1a8a367&quot;, &quot;Click here to view this video&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>How to Login to the CS Member Portal</label>
    <type>Text</type>
</CustomField>