force-app/main/default/objects/Partner__c/fields/Training_Video_two__c.field-meta.xml
<CustomField>
    <fullName>Training_Video_two__c</fullName>
    <formula>HYPERLINK(&quot;https://www.useloom.com/share/ffedb4c0eef711e6b739413e95536ce0&quot;, &quot;Click here to view this video&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>How to Process an Application</label>
    <type>Text</type>
</CustomField>