force-app/main/default/objects/Partner__c/listViews/MA_RL_Partners.listView-meta.xml
<ListView>
    <fullName>MA_RL_Partners</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        
            <field>State__c</field>
        
            <operation>equals</operation>
        
            <value>MA</value>
        
        </filters>
    <label>MA RL Partners</label>
</ListView>