force-app/main/default/objects/Partner__c/listViews/Partner_View.listView-meta.xml
<ListView>
    <fullName>Partner_View</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Partner View</label>
</ListView>