force-app/main/default/objects/Partner__c/listViews/Partners.listView-meta.xml
<ListView>
    <fullName>Partners</fullName>
    <columns>NAME</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Street_Address__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        
            <field>Products__c</field>
        
            <operation>equals</operation>
        
            <value>Community Solar</value>
        
        </filters>
    <label>CS Partners</label>
    <sharedTo>
        
            <allInternalUsers/>
        
        </sharedTo>
</ListView>