force-app/main/default/objects/Partner__c/listViews/SC_NC_RL_Partners.listView-meta.xml
<ListView>
    <fullName>SC_NC_RL_Partners</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        
            <field>State__c</field>
        
            <operation>equals</operation>
        
            <value>SC,NC,FL</value>
        
        </filters>
    <filters>
        
            <field>OWNER.LAST_NAME</field>
        
            <operation>equals</operation>
        
            <value>Otis,Zou,Sheaff,Griswold,Wells</value>
        
        </filters>
    <label>SC/NC RL Partners</label>
</ListView>